src/objects/Events__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Enter City Name</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact_Person__r.Phone</formula>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Email__c</fullName>
        <formula>Contact_Person__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Contact Person)</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Event End Date</description>
        <label>End_Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Desc__c</fullName>
        <label>Event_Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event_Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Venue_Details__c</fullName>
        <formula>Organiser__r.Account.BillingStreet &amp; BR() &amp; Organiser__r.Account.BillingCity
&amp; BR() &amp; Organiser__r.Account.BillingPostalCode &amp; BR() &amp; Organiser__r.Account.BillingState  &amp; BR() &amp; Organiser__r.Account.BillingCountry</formula>
        <label>Event Venue Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Year__c</fullName>
        <description>Year of  Event</description>
        <label>Event Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrations__c</fullName>
        <description>Number of Registrations in Event</description>
        <label>Number of Registrations</label>
        <summaryForeignKey>Event_Booking__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Style__c</fullName>
        <label>Registration Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Lightning Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sling_Meet_Date__c</fullName>
        <label>Sling Meet Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Enter State/Province</description>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line1__c</fullName>
        <description>Enter Street Line Address</description>
        <label>Street Line1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line2__c</fullName>
        <description>Enter  Near Landmark</description>
        <label>Street Line2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Sales_Start_Date__c</fullName>
        <description>Enter Ticket sales Start date</description>
        <label>Ticket Sales Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Enter Zip/Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Events</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Status__c</columns>
        <columns>Registration_Style__c</columns>
        <columns>Capacity__c</columns>
        <columns>Event_Year__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Ticket_Sales_Start_Date__c</columns>
        <columns>Number_of_Registrations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>Region</fullName>
        <active>true</active>
        <label>Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>